--- a/exts/omni.warp.core/config/extension.toml
+++ b/exts/omni.warp.core/config/extension.toml
@@ -1,6 +1,6 @@
 [package]
 # Semantic Versioning is used: https://semver.org/
-version = "1.0.0-beta.7"
+version = "0.11.0"
 authors = ["NVIDIA"]
 title = "Warp Core"
 description="The core Warp Python module"
